src/default.css
/* ... */
.attach-container > .attach-row > .attach-dropzone {
  padding: 1em;
  text-align: center;
  background: #ffffff;
  border: 1px solid #ddd;
  cursor: pointer;
  border-radius: 0.25em;
  transition: background-color 0.15s ease-in-out;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}
.attach-container > .attach-row > .attach-dropzone.populated {
  background-color: #f1f8e9;
  border-color: #8bc34a;
  border-style: solid;
  text-align: left;
}
.attach-container > .attach-row > .attach-dropzone.dragover {
  background-color: #e1f5fe;
  border-color: #03a9f4;
}
.attach-container > .attach-row > .attach-dropzone > .thumbnail {
  max-width: 10em;
  max-height: 10em;
}
.attach-container > .attach-row .attach-row-info {
  font-family: monospace;
  flex-grow: 1;
}
.attach-container > .attach-row .attach-desc {
  max-width: initial;
  width: 100%;
  box-sizing: border-box;
  min-height: 4em;
  padding: 0.5em;
  font-family: inherit;
  resize: vertical;
}
.attach-container > .attach-row .attach-row-remove {
  align-self: center;
  padding: 0.25em 0.75em;
  margin-left: 1em;
  background-color: #d32f2f;
  color: #fff;
  border: none;
  border-radius: 0.25em;
  cursor: pointer;
}
.attach-container > .attach-row .attach-row-remove:hover {
  background-color: #b71c1c;
}
.attach-container > .attach-controls {
  display: flex;
  flex-direction: row;
  gap: 1em;
}
.attach-container > .attach-controls .attach-add-button {
  padding: 0.5em 1em;
  cursor: pointer;
  flex-grow: 2;
}

/* Objects in the "desktoponly" class are invisible on mobile */
@media screen and (max-width: 600px) {
  .desktoponly {
    display: none;
  }
}
/* Float sidebars to the right of the main content only if there's room. */
@media screen and (min-width: 600px) {
  .sidebar {
    float: right;
    max-width: 33%;
    margin-left: 1em;
  }
}
/* Objects in the "wideonly" class are invisible only on wide-screen desktops */
@media screen and (max-width: 1200px) {
  .wideonly {
    display: none;
  }
}

